name:                DysFRP-example
version:             0.1.0.0
author:              Marek Materzok
maintainer:          tilk@tilk.eu
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable DysFRP-example
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , buttons-gui
                     , gloss
                     , DysFRP
  default-language:    Haskell2010
  ghc-options: -W -Wall
