name:                DysFRP-example
version:             0.1.0.0
author:              Marek Materzok
maintainer:          tilk@tilk.eu
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable DysFRP-example
  hs-source-dirs:      ., ../shared
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9
                     , gloss >=1.9.2.1
                     , gloss-algorithms >=1.9.2.1
                     , DysFRP == 0.1
  default-language:    Haskell2010
  ghc-options: -W -Wall
