name:                RxHaskell-example
version:             0.1.0.0
license:             PublicDomain
author:              as_capabl
maintainer:          as-capabl@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable RxHaskell-example
  hs-source-dirs:      ., ../shared
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.8, gloss >=1.8 && <1.9, RxHaskell >=0.2 && <0.3, transformers
  default-language:    Haskell2010
  ghc-options: -W -Wall