name:                Yampa-example
version:             0.1.0.0
license:             PublicDomain
author:              Hidenori Azuma
maintainer:          as.capabl@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable Yampa-example
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , buttons-gui
                     , gloss
                     , Yampa
  default-language:    Haskell2010
  ghc-options: -W -Wall
