name:                elerea-example
version:             0.1.0.0
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable elerea-example
  hs-source-dirs:      ., ../shared
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.8
                     , gloss >=1.7.8.1
                     , elerea >=2.6.0
  default-language:    Haskell2010
  ghc-options: -W -Wall
