name:                euphoria-example
version:             0.1.0.0
license:             PublicDomain
author:              Mitsutoshi Aoe
maintainer:          maoe@foldr.in
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable euphoria-example
  hs-source-dirs:      ., ../shared
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.9
                     , gloss >=1.9.2.1
                     , gloss-algorithms >=1.9.2.1
                     , euphoria >=0.4.9
  default-language:    Haskell2010
  ghc-options: -W -Wall
