name:                euphoria-example
version:             0.1.0.0
license:             PublicDomain
author:              Mitsutoshi Aoe
maintainer:          maoe@foldr.in
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable euphoria-example
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , buttons-gui
                     , gloss
                     , euphoria
  default-language:    Haskell2010
  ghc-options: -W -Wall
