name:                gloss-example
version:             0.1.0.0
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable gloss-example
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7
                     , gloss
  default-language:    Haskell2010
  ghc-options: -W -Wall
