name:                gloss-example
version:             0.1.0.0
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable gloss-example
  hs-source-dirs:      ., ../shared
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.9
                     , gloss >=1.9.2.1
                     , gloss-algorithms >=1.9.2.1
  default-language:    Haskell2010
  ghc-options: -W -Wall
