name:                grapefruit-example
version:             0.1.0.0
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable grapefruit-example
  hs-source-dirs:      ., ../shared, ../callback-example
  main-is:             Main.hs
  build-depends:       base
                     , gloss >=1.7.8.1
                     , grapefruit-frp >=0.1.0.3
  default-language:    Haskell2010
  ghc-options: -W -Wall
