name:                grapefruit-example
version:             0.1.0.0
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable grapefruit-example
  hs-source-dirs:      ., ../callback-example/
  main-is:             Main.hs
  build-depends:       base
                     , buttons-gui
                     , gloss
                     , grapefruit-frp
  default-language:    Haskell2010
  ghc-options: -W -Wall
