name:                machinecell-example
version:             0.1.0.0
license:             PublicDomain
author:              Hidenori Azuma
maintainer:          as.capabl@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable machinecell-example
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , buttons-gui
                     , gloss
                     , machinecell
  default-language:    Haskell2010
  ghc-options: -W -Wall
