name:                objective-example
version:             0.1.0.0
license:             PublicDomain
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
category:            Control
build-type:          Simple
cabal-version:       >=1.10

executable objective-example
  hs-source-dirs:      ., ../shared
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.9
                     , gloss >=1.9.2.1
                     , gloss-algorithms >=1.9.2.1
                     , objective >=1.0 && <1.2
  default-language:    Haskell2010
  ghc-options: -W -Wall
