name:                objective-example
version:             0.1.0.0
license:             PublicDomain
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
category:            Control
build-type:          Simple
cabal-version:       >=1.10

executable objective-example
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , buttons-gui
                     , gloss
                     , objective
  default-language:    Haskell2010
  ghc-options: -W -Wall
