name:                reactive-bacon-example
version:             0.1.0.0
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable reactive-bacon-example
  hs-source-dirs:      ., ../shared
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.8
                     , gloss >=1.8.0.1
                     , reactive-bacon
  default-language:    Haskell2010
  ghc-options: -W -Wall
