name:                reflex-example
version:             0.1.0.0
license:             PublicDomain
author:              Jeffrey Rosenbluth
maintainer:          jeffrey.rosenbluth@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable reflex-example
  hs-source-dirs:      ., ../shared
  main-is:             Main.hs
  build-depends:       base >= 4.6 && < 4.9
                     , transformers >= 0.4.2 && < 0.5
                     , gloss >= 1.9.2.1 && < 1.10
                     , gloss-algorithms >= 1.9.2.1 && < 1.10
                     , reflex >= 0.3 && < 0.4
                     , reflex-gloss >= 0.1 && < 0.2
                     , dependent-sum >= 0.2.1 && < 0.3

  default-language:    Haskell2010
  ghc-options: -W -Wall
