name:                reflex-example
version:             0.1.0.0
license:             PublicDomain
author:              Jeffrey Rosenbluth
maintainer:          jeffrey.rosenbluth@gmail.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable reflex-example
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , buttons-gui
                     , gloss
                     , transformers
                     , reflex
                     , reflex-gloss
                     , dependent-sum

  default-language:    Haskell2010
  ghc-options: -W -Wall
