name:                buttons-gui
version:             0.1.0.0
synopsis:            The gloss GUI with which all of frp-zoo's examples interact
homepage:            https://github.com/gelisam/frp-zoo
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Buttons
  build-depends:       base
                     , gloss
                     , gloss-algorithms
  default-language:    Haskell2010
