name:                varying-example
version:             0.1.0.0
license:             PublicDomain
author:              Schell Scivally
maintainer:          schell.scivally@synapsegroup.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable varying-example
  hs-source-dirs:      ., ../shared
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.9
                     , gloss >=1.9.2.1
                     , gloss-algorithms >=1.9.2.1
                     , varying >= 0.1.1
  default-language:    Haskell2010
  ghc-options: -W -Wall
