name:                varying-example
version:             0.1.0.0
license:             PublicDomain
author:              Schell Scivally
maintainer:          schell.scivally@synapsegroup.com
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable varying-example
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , buttons-gui
                     , gloss
                     , varying
  default-language:    Haskell2010
  ghc-options: -W -Wall
